# Exportation-Tracker

./: .eslintrc.json  .gitattributes  .gitignore  AI_SETUP_GUIDE.md  COMMIT_MSG.txt  COMPLETE_RULE_TEMPLATE.txt  EMAIL_BOOKING_GUIDE.md  PACKING_LIST_MIGRATION_GUIDE.md  README.md  add_approval_to_companies.sql  add_closure_status_to_opportunities.sql  add_destination_to_opportunities.sql  add_focus_color_to_opportunities.sql  add_is_active_to_destinations.sql  add_opportunity_id_to_quotations.sql  add_requested_destination_to_quotations.sql  add_sort_order_to_opportunities.sql  build_output.txt  build_output_2.txt  build_output_2_utf8.txt  build_output_utf8.txt  create_cms_tables.sql  create_debit_notes_table.sql  create_debit_notes_table_updated.sql  create_document_analysis_history.sql  create_document_comparison_rules_table.sql  create_document_submissions_table.sql  create_minimal_quotation.js  create_mock_user.sql  create_opportunities_table.sql  create_opportunity_tasks.sql  create_product_master_tables.sql  create_quotation.js  create_quotations_table.sql  cursor-mcp-config.json  database-schema.sql  database-setup.md  development_mode.sql  disable_rls_final.sql  disable_rls_for_dev.sql  (+35 more)
mcp-node-server/: README.md  cursor-integration.js  mcp-server.js  package-lock.json  package.json  server.js
mcp-server/: README.md  cursor-mcp-config.json  pyproject.toml
mcp-server/src/: quotation_server.py
migrations/: 001_add_customer_support.sql  002_add_customer_rls_policies.sql  002_add_quotation_signature.sql  003_add_proforma_invoices.sql  008_add_quotation_vat.sql  (+30 more)
(+324 files in other folders)
