[project]
name = "exportation-quotation-mcp-server"
version = "0.1.0"
description = "MCP Server for managing Exportation Tracker quotations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.16.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
quotation-mcp-server = "src.quotation_server:main"

